[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.111.0",
    "gtts==2.5.1",
    "openai-agents>=0.2.8",
    "python-dotenv>=1.1.1",
    "python-multipart==0.0.9",
    "uvicorn[standard]==0.30.0",
]
